src/main/java/com/example/team_work_management/exception/error/EmailAlreadyExistsException.java
package com.example.team_work_management.exception.error;

public class EmailAlreadyExistsException extends RuntimeException{
    public EmailAlreadyExistsException(String message){
        super(message);
    }
}
